--- a/app.component.html
+++ b/app.component.html
@@ -3,8 +3,8 @@
   <h1>
     Welcome to {{title}}!
   </h1>
-  <button (click)="getUser()">Load User</button>
+  <button class="btn" (click)="getUser()">Load User</button>
 </div>
-<h2>Here are some links to help you start: </h2>
+
 
 
